# HW21

./: .gitignore  README.md  abstract_storage.py  base_storage.py  extensions.py  main.py  pyproject.toml  request.py  shop.py  storage.py
